# Implementation-of-ISP-on-Edge-Devices

./: README.md
Benchmarking/: README.md
Cross Sensor Testing/: 1_preprocess_and_infer.py  2_evaluate_metrics.py  3_ablation_study.py  4_generate_variations.py  README.md
Cuda C implementation of SYENet Slim and SYENet/: cuda_benchmark_results.json  how_to_run.txt  how_to_use.txt  live_sources_repo_link.txt  nm_benchmark_results.json  orig_model.onnx  orig_model.tflite  repack_model.py  run_cuda_benchmark.py  run_nm_benchmark.py  save_sample_outputs.py  slim_model.onnx  slim_model.pt  slim_model.tflite  syenet_system_explanation.html  what_it_does.txt
Cuda C implementation of SYENet Slim and SYENet/New Module/: original_model.tflite
Cuda C implementation of SYENet Slim and SYENet/New Module/model_best.pkl/archive/: data.pkl
Cuda C implementation of SYENet Slim and SYENet/New Module/model_best.pkl/archive/data/: 1  10  100  101  102  103  105  106  107  108  109  11  110  111  112  114  115  116  117  118  119  12  120  121  123  124  125  126  127  128  129  13  130  132  133  135  136  137  138  139  (+214 more)
Cuda C implementation of SYENet Slim and SYENet/cuda_benchmark/: CMakeLists.txt  build.bat
Cuda C implementation of SYENet Slim and SYENet/cuda_benchmark/include/: benchmark.h  logger.h  metrics.h  nvml_monitor.h  report_gen.h  trt_engine.h
Cuda C implementation of SYENet Slim and SYENet/cuda_benchmark/src/: benchmark.cu  main.cu  metrics.cu  nvml_monitor.cu  report_gen.cpp  trt_engine.cu
Cuda C implementation of SYENet Slim and SYENet/cuda_benchmark/tools/: 01_export_onnx.py  02_build_trt_engines.py  03_run_benchmark.py  03b_tflite_only.py  03c_pytorch_only.py  04_visualize.py  05_generate_tables.py
Cuda C implementation of SYENet Slim and SYENet/cuda_isp/: compile.bat  demo_step2.bat  demo_step3.bat  do_compile.bat  do_compile2.bat  extract_weights.py  make_comparison.py  run_all.bat  syenet.cu  syenet_cpu.c  verify.py  verify_cpu.py
Cuda C implementation of SYENet Slim and SYENet/cuda_sr/: CMakeLists.txt  README.md
Cuda C implementation of SYENet Slim and SYENet/cuda_sr/src/: kernels.cu  kernels.cuh  main.cu  model.cu  model.h  utils.cu  utils.h  weights.h
Cuda C implementation of SYENet Slim and SYENet/cuda_sr/tools/: build_tensorrt_engine.py  export_to_onnx.py  export_weights.py  inspect_model.py  sanity_check.py  state_dict_meta.json
Cuda C implementation of SYENet Slim and SYENet/data/: 0  1  10  11  12  13  14  16  17  18  19  2  3  4  5  6  7  8  9
Cuda C implementation of SYENet Slim and SYENet/new_module/: extract_nm_weights.py
Cuda C implementation of SYENet Slim and SYENet/orig_model_tf/: fingerprint.pb  orig_model_float16.tflite  orig_model_float32.tflite  saved_model.pb
Cuda C implementation of SYENet Slim and SYENet/orig_model_tf/variables/: variables.data-00000-of-00001  variables.index
Cuda C implementation of SYENet Slim and SYENet/sample_outputs/: comparison.html  sample_results.json
Cuda C implementation of SYENet Slim and SYENet/slim_model_tf/: fingerprint.pb  saved_model.pb  slim_model_dynamic_range_quant.tflite  slim_model_float16.tflite  slim_model_float32.tflite
